--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Taylor's World</title>
 	<link rel="stylesheet" type="text/css" href="styles/helloworld.css"> 
+	<link https://barrycumbie.github.io/wedDevPortfolio/index.html>
 </head>
 
 <style>
@@ -15,3 +16,5 @@
 	<img src="img/thax.jfif"/> 
 </body>
 </html> 
+	
+	https://coachthax.github.io/Taylor-Thaxton-s-CIS-376-Fall-2018-Web-Devlopment-Repository-/
