--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Taylor's World</title>
 	<link rel="stylesheet" type="text/css" href="styles/helloworld.css"> 
-	<link https://barrycumbie.github.io/wedDevPortfolio/>
+	<link https://barrycumbie.github.io/wedDevPortfolio/index.html>
 </head>
 
 <style>
