--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Taylor's World</title>
 	<link rel="stylesheet" type="text/css" href="styles/helloworld.css"> 
-	<link https://barrycumbie.github.io/wedDevPortfolio/index.html>
+	
 </head>
 
 <style>
@@ -14,6 +14,8 @@
 <body>
 	<h3>Hello World!</h3>
 	<img src="img/thax.jfif"/> 
+	<a href="https://docs.google.com/document/d/1OsthduX3FR6_PELVIpTpB1wWZUZKoRXT7EYHhKgWYbQ/edit?usp=sharing" target="_blank">Our Class Doc</a> 
+
 </body>
 </html> 
 	
